- yWeb: rename Y_NI_blank.yhtm

--- a/data/y-web/Y_Main.css
+++ b/data/y-web/Y_Main.css
@@ -1050,3 +1050,13 @@ img#shot:hover {
 	max-width: 300px;
 	max-height:300px;
 }
+
+#startjpg {
+	display: block;
+	text-align: center;
+	width: 750px;
+	margin: 1.5em auto;
+	padding: .5em;
+	border: 1px solid #a0a0a0;
+	box-shadow: .5em .5em .5em rgba(0, 0, 0, 0.5);
+}
