- yWeb/Y_Boxcontrol_Menue: use jquery

--- a/data/y-web/Y_Main.css
+++ b/data/y-web/Y_Main.css
@@ -620,7 +620,7 @@ tr {
 .y_text_boxcontrol_table {
 	width:114px;
 	height: 23px;
-	background: url('/images/audiobar.png') no-repeat 1px 1px;
+	background: url('/images/volumebar.png') no-repeat 1px 1px;
 	padding: 1px;
 	margin-top: 10px;
 	border: #FD6D13 solid 1px;
@@ -649,7 +649,7 @@ tr {
 	margin-top: 5px;
 	margin-bottom: -1px;
 }
-#audiobar_right,
+#volumebar_right,
 #sigbar_right,
 #snrbar_right {
 	background-color: #ffffff;
