--- a/data/y-web/styles/Y_Dist-GreyBlue.css
+++ b/data/y-web/styles/Y_Dist-GreyBlue.css
@@ -234,7 +234,7 @@ hr {
 .y_text_boxcontrol_div_progress {
 	border-color: #303030;
 }
-#audiobar_right,
+#volumebar_right,
 #sigbar_right,
 #snrbar_right {
 	background-color: #272525;
