--- a/data/y-web/styles/Y_Dist-NI_dark.css
+++ b/data/y-web/styles/Y_Dist-NI_dark.css
@@ -190,7 +190,7 @@ textarea {
 .y_text_boxcontrol_div_progress {
 	border-color: #3b3b3b;
 }
-#audiobar_right,
+#volumebar_right,
 #sigbar_right,
 #snrbar_right {
 	background-color: #151515;
